# era-cuda

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: build.yaml
bindings-generator/: Cargo.toml
bindings-generator/src/: main.rs
criterion-cuda/: Cargo.toml
cudart/: Cargo.toml
cudart-sys/: Cargo.toml  build.rs
cudart-sys/src/: bindings.rs  lib.rs  utils.rs
cudart/src/: execution.rs  memory.rs  memory_pools.rs  occupancy.rs  unified.rs
